--- a/Ingress/ingress-pesbuk.yaml
+++ b/Ingress/ingress-pesbuk.yaml
@@ -7,7 +7,7 @@ metadata:
     kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
-  - host: fes-dev.cupu69.xyz
+  - host: pesbuk-stg.pastikerja.xyz
     http: 
       paths:
       - backend:
