--- a/Service/service-pes.yaml
+++ b/Service/service-pes.yaml
@@ -4,7 +4,7 @@ metadata:
   name: svc-pesbuk
   namespace: staging
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - port: 80
     targetPort: 80
